<resources>
    <string name="app_name">ASARI</string>
    <string name="t3">Contraseña</string>
    <string name="t2">NOMBRE</string>
    <string name="t1">NICK</string>
    <string name="b1">REGISTRAR</string>
    <string name="b2">CONSULTAR</string>
    <string name="politicas_seccion">Politicas</string>
    <string name="t4">TELEFONO</string>
    <string name="t5">Fecha N.</string>
    <string name="titulo">CONSULTAS BD</string>
    <string name="SECION">INICIAR SECION</string>

    <string name="l1">BIENVENIDO</string>
    <string name="l2">REGISTRAR</string>
    <string name="l3">INICIAR SESION</string>
    <string name="l4">QUE QUIERES</string>
    <string name="MSN_DUEL">Que quieres hacer hoy?</string>

    <string name="SALUDO_1"> HACER HOY</string>
    <string name="l5">RAMDON DIMENCIONAL STANDAR</string>
    <string name="l6">USUARIO #1</string>
    <string name="l7">USUARIO #2</string>
    <string name="l8">PUNTAJE DEL DUELO MOSTROS</string>
    <string name="l9">JORNADA #0</string>
    <string name="R1">DUELISLISTA</string>
    <string name="R2">REGISTRO DEL DUELISTA</string>
    <string name="T1">Nick de duelista</string>
    <string name="T2">Codigo de ingreso</string>
    <string name="T3">Contraseña</string>
    <string name="P1">CONTRASEÑA</string>
    <string name="R3">ELIJA LA JORNADA</string>
    <string name="B1">GUARDAR</string>
    <string name="B2">REGISTRAR</string>
    <string name="B3">STAR</string>
    <string name="B4">ENTRAR</string>
    <string name="T4">Telefono</string>
    <string name="ADMIN_4">Puntaje</string>
    <string name="ADMIN_5">Nuevo Nick</string>
    <string name="ADMIN_3">Configuracion</string>
    <string name="b7">Salir</string>
    <string name="T5">Fecha nacimiento</string>
    <string name="perfil">PERFIL</string>
    <string name="ADMIN_1">BIENVENIDO ADMINISTRADOR</string>
    <string name="ADMIN_2">Random</string>
    <string name="ayuda_1">Codigo</string>
    <string name="ayuda_2">Asary</string>
    <string name="ayuda_3">Codigo Gremio</string>
    <string name="ayuda_4">REGISTRO NOMBRE GREMIO Y DIMENCIONES</string>
    <string name="ayuda_5">CODIGO DE PERMISO</string>
    <string name="ayuda_6">Dimencion 1</string>
    <string name="ayuda_7">Dimencion 2</string>
    <string name="ayuda_8">Dimencion 3</string>
    <string name="ayuda_9">Dimencion 4</string>
    <string name="ayuda_10">Dimencion 5</string>
    <string name="ayuda_11">Nombre Gremio</string>
    <string name="Perfil_Descaso">Usuario Espectador</string>
    <string name="ayuda_12">Nombre Lider</string>
    <string name="ayuda_13">Gremio:</string>
    <string name="ayuda_14">Codigo:</string>
    <string name="ayuda_15">Contraseña</string>
    <string name="ayuda_16">CONSULTA</string>
    <string name="TABLARANDOM">RESULTADOS RANDOM</string>
    <string name="TABLANOMBRE">DUELISTA</string>
    <string name="PERFIL_10">Cierre</string>
    <string name="TABLAPUNTOS1">DULISTA 1</string>
    <string name="TABLAPUNTOS2">DULISTA 2</string>
    <string name="CONFIG_PADD">Anterior pass</string>
    <string name="CONFIG_PADD2">Nuevo pass</string>
    <string name="CONFIG_PADD3">KRA1</string>
    <string name="CONFIG_PADD4">Nuevo Nick</string>
</resources>