<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070707"
    tools:context="licence.asari.manager.UsuarioStandar">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="467dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="259dp"
        android:layout_marginEnd="0dp">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/marcoladrillov2" />

        <ImageView
            android:id="@+id/imageView28"
            android:layout_width="51dp"
            android:layout_height="61dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="288dp"
            android:onClick="renovarClave"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/contrase_a" />

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="51dp"
            android:layout_height="61dp"
            android:layout_marginTop="288dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/boton_ext2"
            android:onClick="tablaFinal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/boton_ext11" />

        <ImageView
            android:id="@+id/imageView31"
            android:layout_width="46dp"
            android:layout_height="62dp"
            android:layout_marginTop="288dp"
            android:background="@drawable/efecto_button_puntaje"
            android:onClick="puntuacion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.259"
            app:layout_constraintStart_toEndOf="@+id/imageView28"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/boton_evo2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/ADMIN_4"
            android:textColor="#F3EFEF"
            app:layout_constraintEnd_toEndOf="@+id/imageView31"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/imageView31"
            app:layout_constraintTop_toTopOf="@+id/imageView31" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/ADMIN_3"
            android:textColor="#F4F0F0"
            app:layout_constraintEnd_toEndOf="@+id/imageView28"
            app:layout_constraintStart_toStartOf="@+id/imageView28"
            app:layout_constraintTop_toTopOf="@+id/imageView28" />

        <RadioGroup
            android:id="@+id/EleccionDimencionGb"
            android:layout_width="136dp"
            android:layout_height="139dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.403"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/dimenInicial_1Gb"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="@string/ayuda_6"
                android:textColor="#F1EEEE" />

            <RadioButton
                android:id="@+id/dimenInicial_2Gb"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:text="@string/ayuda_7"
                android:textColor="#EAE4E4" />

            <RadioButton
                android:id="@+id/dimenInicial_3Gb"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/ayuda_8"
                android:textColor="#FAF9F9" />

            <RadioButton
                android:id="@+id/dimenInicial_4Gb"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/ayuda_9"
                android:textColor="#F4F2F2" />
        </RadioGroup>

        <ImageButton
            android:id="@+id/perfilB1"
            android:layout_width="98dp"
            android:layout_height="30dp"
            android:layout_marginTop="76dp"
            android:onClick="accionElegirDimencio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toEndOf="@+id/EleccionDimencionGb"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/boton_registro" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="Clasificatoria"
            android:textColor="#F4F3F3"
            app:layout_constraintEnd_toEndOf="@+id/imageView14"
            app:layout_constraintHorizontal_bias="0.479"
            app:layout_constraintStart_toStartOf="@+id/imageView14"
            app:layout_constraintTop_toTopOf="@+id/imageView14" />


        <ImageButton
            android:id="@+id/imageButton19"
            android:layout_width="64dp"
            android:layout_height="67dp"
            android:layout_marginTop="196dp"
            android:background="@drawable/efecto_button_mariposa"
            android:onClick="estadisticas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/botonmariposa" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:text="Estadisticas"
            android:textAlignment="center"
            android:textColor="#F8F4F4"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageButton19"
            app:layout_constraintHorizontal_bias="0.875"
            app:layout_constraintStart_toStartOf="@+id/imageButton19"
            app:layout_constraintTop_toTopOf="@+id/imageButton19" />

        <ImageButton
            android:id="@+id/Eventtesla_b2"
            android:layout_width="57dp"
            android:layout_height="64dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/efecto_button_evento"
            android:onClick="salonEventos2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.189"
            app:layout_constraintStart_toEndOf="@+id/imageButton19"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/boton_evento" />

        <TextView
            android:id="@+id/Eventtesla_l1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="Eventos"
            android:textAlignment="center"
            android:textColor="#F6EEEE"
            app:layout_constraintEnd_toEndOf="@+id/Eventtesla_b2"
            app:layout_constraintStart_toStartOf="@+id/Eventtesla_b2"
            app:layout_constraintTop_toTopOf="@+id/Eventtesla_b2" />

        <ImageButton
            android:id="@+id/imageButton25"
            android:layout_width="65dp"
            android:layout_height="60dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/efecto_button_evento"
            android:onClick="menuResultados"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.916"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/botonevento" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="Salon Evento"
            android:textAlignment="viewStart"
            android:textColor="#FDF8F8"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageButton25"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="@+id/imageButton25"
            app:layout_constraintTop_toTopOf="@+id/imageButton25" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="415dp"
            android:layout_height="93dp"
            android:layout_marginTop="-20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="410dp"
        android:layout_height="183dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="0dp">

        <ImageView
            android:id="@+id/imageView104"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/perfil" />

        <TextView
            android:id="@+id/perfil_l1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/perfil"
            android:textColor="#FAF6F6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.419"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>